# mamba

./: .gitignore  CLAUDE.md  LICENSE  README.md  dune-project  mamba-cli.opam  mamba.opam
.github/workflows/: ci.yml
examples/: dune  gen_man.ml  git_like.ml  hello.ml  infra_cli.ml  kitchen_sink.ml  lwt_bridge.ml
examples/infra_cli/: FRICTION.md
examples/kitchen_sink/: FEATURES.md
src/mamba/: arg.ml  arg.mli  args.ml  args.mli  command.ml  command.mli  completion.ml  completion.mli  dune  error.ml  error.mli  flag.ml  flag.mli  flag_group.ml  flag_group.mli  help.ml  help.mli  hook.ml  hook.mli  lifecycle.ml  lifecycle.mli  mamba.ml  mamba.mli  man.ml  man.mli  parser.ml  parser.mli  program.ml  program.mli  style.ml  suggest.ml  suggest.mli
src/mamba_cli/: dune  main.ml
tests/: cobra_args.ml  cobra_case_insensitive.ml  cobra_command.ml  cobra_completions.ml  cobra_flag_groups.ml  cobra_groups.ml  cobra_suggestions.ml  dune  kubectl_parity.ml  test_kitchen_sink.ml  test_mamba.ml  test_util.ml
tests/kubectl_ref/: help_delete.txt  help_get.txt  help_version.txt
